tests/typechecking/valid/same_vars_diff_fn.ml
let rec f x = 1 + x in
let rec g x = 2. *. x in
let x = f 10 in
let x = g 1. in
()
