tests/typechecking/invalid/array_size_not_int_2.ml
let x = 2. in
let a = Array.create x 5. in
()
